Get rid of the generator, simpler is better

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-<!DOCTYPE html> <html lang=en> <head> <meta charset=utf-8> <meta name=viewport content="width=device-width, initial-scale=1"> <meta name=description content="libuv, a platform abstraction library with focus on asynchronous i/o."> <meta name=keywords content="asynchronous i/o, i/o, async, epoll, kqueue, node, nodejs, iojs"> <meta name=author content="Saúl Ibarra Corretgé"> <title>libuv|Cross-platform asynchronous I/O</title>  <link rel=stylesheet href=styles/vendor.css> <link rel=stylesheet href=styles/main.css> </head> <body> <div class=site-wrapper> <div class=site-wrapper-inner> <div class=cover-container> <div class="masthead clearfix"> <div class=inner> <h3 class=masthead-brand>libuv</h3> <nav> <ul class="nav masthead-nav"> <li><a href=http://docs.libuv.org>Documentation</a></li> <li><a href=https://github.com/libuv/libuv>Code</a></li> <li><a href="http://dist.libuv.org/dist/">Releases</a></li> <li><a href=http://groups.google.com/group/libuv>Mailing List</a></li> <li><a href="http://webchat.freenode.net?channels=libuv&uio=d4">IRC</a></li> </ul> </nav> </div> </div> <div class="inner cover"> <h1 class=cover-heading>Asynchronous I/O made simple.</h1> <p class=lead>libuv is a multi-platform support library with a focus on asynchronous I/O.</p> <p class=lead> <a href=https://github.com/libuv/libuv class="btn btn-lg btn-default">Show me the code!</a> </p> </div> <div class=mastfoot> <div class=inner> <p id=footer-p>Made with love by the libuv team.</p> </div> </div> </div> </div> </div> <script src=scripts/main.js></script> </body> </html> 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="libuv, a platform abstraction library with focus on asynchronous i/o.">
+    <meta name="keywords" content="asynchronous i/o, i/o, async, epoll, kqueue, node, nodejs, iojs">
+    <meta name="author" content="Saúl Ibarra Corretgé">
+
+    <title>libuv|Cross-platform asynchronous I/O</title>
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Customizations -->
+    <link rel="stylesheet" href="/styles/main.css">
+  </head>
+
+  <body>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">libuv</h3>
+              <nav>
+                <ul class="nav masthead-nav">
+                  <li><a href="http://docs.libuv.org">Documentation</a></li>
+                  <li><a href="https://github.com/libuv/libuv">Code</a></li>
+                  <li><a href="http://dist.libuv.org/dist/">Releases</a></li>
+                  <li><a href="http://groups.google.com/group/libuv">Mailing List</a></li>
+                  <li><a href="http://webchat.freenode.net?channels=libuv&uio=d4">IRC</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">Asynchronous I/O made simple.</h1>
+            <p class="lead">libuv is a multi-platform support library with a focus on asynchronous I/O.</p>
+            <p class="lead">
+              <a href="https://github.com/libuv/libuv" class="btn btn-lg btn-default">Show me the code!</a>
+            </p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p id="footer-p">Made with love by the libuv team.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <script src="/scripts/main.js"></script>
+  </body>
+</html>
