Remove IRC, add GH discussion forum
Refs: https://github.com/libuv/libuv/pull/3214

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <li><a href="https://github.com/libuv/libuv">Code</a></li>
                   <li><a href="http://dist.libuv.org/dist/">Releases</a></li>
                   <li><a href="http://groups.google.com/group/libuv">Mailing List</a></li>
-                  <li><a href="http://webchat.freenode.net?channels=libuv&uio=d4">IRC</a></li>
+                  <li><a href="https://github.com/libuv/libuv/discussions">Discussion Forum</a></li>
                 </ul>
               </nav>
             </div>
