Make all links HTTPS

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
               <h3 class="masthead-brand">libuv</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="http://docs.libuv.org">Documentation</a></li>
+                  <li><a href="https://docs.libuv.org">Documentation</a></li>
                   <li><a href="https://github.com/libuv/libuv">Code</a></li>
-                  <li><a href="http://dist.libuv.org/dist/">Releases</a></li>
-                  <li><a href="http://groups.google.com/group/libuv">Mailing List</a></li>
+                  <li><a href="https://dist.libuv.org/dist/">Releases</a></li>
+                  <li><a href="https://groups.google.com/group/libuv">Mailing List</a></li>
                   <li><a href="https://github.com/libuv/libuv/discussions">Discussion Forum</a></li>
                 </ul>
               </nav>
